--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.25.1"
+    "dotenv": "^16.3.1",
+    "fastify": "^4.25.1",
+    "fastify-cors": "^6.1.0",
+    "rethinkdb": "^2.4.2"
   }
 }
