--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1522.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.25.1",
     "fastify-cors": "^6.1.0",
