--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
     "aws-sdk": "^2.1522.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.25.1",
-    "fastify-cors": "^6.1.0",
     "rethinkdb": "^2.4.2"
   }
 }
