--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.25.1",
     "rethinkdb": "^2.4.2"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.2"
   }
 }
